- added more information in staff status about staff contact and tooltip - fixed tooltip not showing on the full td height/width

--- a/NEMO/static/nemo.css
+++ b/NEMO/static/nemo.css
@@ -807,3 +807,43 @@ li.area-tree-node a, li.area-tree-node a:hover, li.area-tree-node a:focus
 	background-color: #fff;
 	z-index: 1;
 }
+
+/* Staff status styles */
+.staff-status-contact, .staff-status-add
+{
+	width: 100%;
+	display: table-cell;
+}
+
+.staff-status-contact
+{
+	padding-right: 8px;
+}
+
+.staff-status-add
+{
+	text-align: right;
+}
+
+.staff-status-availability
+{
+	vertical-align: middle;
+	border-left: 1px solid #ddd;
+	position: relative;
+}
+
+.staff-status-container
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+}
+
+.staff-status-text
+{
+	position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
